// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datepicker > should hide arrow for a range selection 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <!--v-if-->
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should match its default snapshot 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show disabled 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group disabled"
      >
        <button
          class="input-group-addon fill-current pointer-events-none text-gray-300 border-gray-200 border-none"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          disabled=""
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0 opacity-50"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group disabled"
      >
        <button
          class="input-group-addon fill-current pointer-events-none opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          disabled=""
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show invalid 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group invalid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group invalid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show readonly 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group readonly"
      >
        <button
          class="input-group-addon fill-current pointer-events-none text-gray-300 border-gray-200"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          readonly=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0 opacity-50"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group readonly"
      >
        <button
          class="input-group-addon fill-current pointer-events-none opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          readonly=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show required 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          required=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          required=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show the arrow for a range selection 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show the sm size with the dateTime mode 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-1"
    >
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4} [0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="mm/dd/yyyy hh:mm am/pm"
          title="mm/dd/yyyy hh:mm am/pm"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-4 h-4"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4} [0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="mm/dd/yyyy hh:mm am/pm"
          title="mm/dd/yyyy hh:mm am/pm"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show the sm size with the time mode 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-1"
    >
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-clock w-4 h-4"
            data-icon="clock"
            data-prefix="far"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              class=""
              d="M464 256a208 208 0 1 1 -416 0 208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0 256 256 0 1 0 -512 0zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="hh:mm am/pm"
          title="hh:mm am/pm"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-4 h-4"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-clock w-4 h-4"
            data-icon="clock"
            data-prefix="far"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              class=""
              d="M464 256a208 208 0 1 1 -416 0 208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0 256 256 0 1 0 -512 0zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="hh:mm am/pm"
          title="hh:mm am/pm"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > should show valid 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group valid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-arrow-right text-gray-700 w-5 h-5"
          data-icon="arrow-right"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            class=""
            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group valid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-calendar w-4 h-4"
            data-icon="calendar"
            data-prefix="far"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              class=""
              d="M120 0c13.3 0 24 10.7 24 24l0 40 160 0 0-40c0-13.3 10.7-24 24-24s24 10.7 24 24l0 40 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-40c0-13.3 10.7-24 24-24zm0 112l-56 0c-8.8 0-16 7.2-16 16l0 48 352 0 0-48c0-8.8-7.2-16-16-16l-264 0zM48 224l0 192c0 8.8 7.2 16 16 16l320 0c8.8 0 16-7.2 16-16l0-192-352 0z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;
